feat: implement context for yaml & properties sources