@@ -1,7 +1,9 @@
 package info.md7.g11n4j.core.source;
 
 import info.md7.g11n4j.core.exception.NoSuchMessageException;
+import info.md7.g11n4j.core.i18n.MessageContext;
 import org.yaml.snakeyaml.Yaml;
+
 import java.io.File;
 import java.io.InputStream;
 import java.util.*;
@@ -65,22 +67,89 @@ public class YamlMessageSource implements MessageSource {
     @Override
     public String getMessage(String key, Locale locale) throws NoSuchMessageException {
         Map<String, String> localeMessages = messages.getOrDefault(locale, messages.get(defaultLocale));
-        if (localeMessages == null || !localeMessages.containsKey(key)) {
+        if (localeMessages == null) {
             throw new NoSuchMessageException(key, locale);
         }
-        return localeMessages.getOrDefault(key, "[[" + key + "]]");
+        if (localeMessages.containsKey(key)) {
+            return localeMessages.get(key);
+        }
+        String baseKey = key + "._base";
+        if (localeMessages.containsKey(baseKey)) {
+            return localeMessages.get(baseKey);
+        }
+
+        throw new NoSuchMessageException(key, locale);
+    }
+
+    @Override
+    public String getMessage(String key, Locale locale, MessageContext context) throws NoSuchMessageException {
+        if (context == null || context.getContextMap().isEmpty()) {
+            return this.getMessage(key, locale);
+        }
+
+        Map<String, String> localeMessages = messages.getOrDefault(locale, messages.get(defaultLocale));
+        if (localeMessages == null) {
+            throw new NoSuchMessageException(key, locale);
+        }
+        for (Map.Entry<String, String> contextEntry : context.getContextMap().entrySet()) {
+            String contextKey = contextEntry.getKey();
+            String contextValue = contextEntry.getValue();
+
+            String specificKey = key + "." + contextKey + "." + contextValue;
+            if (localeMessages.containsKey(specificKey)) {
+                return localeMessages.get(specificKey);
+            }
+
+            String fallbackKey = key + "." + contextKey + ".other";
+            if (localeMessages.containsKey(fallbackKey)) {
+                return localeMessages.get(fallbackKey);
+            }
+        }
+
+        return this.getMessage(key, locale);
     }
 
     @Override
     public Map<String, String> getPluralForms(String keyPrefix, Locale locale) {
-        Map<String, String> forms = new HashMap<>();
-        messages.getOrDefault(locale, Map.of()).forEach((k, v) -> {
-            if (k.startsWith(keyPrefix + ".")) {
-                forms.put(k.substring(keyPrefix.length() + 1), v);
+        return getPluralForms(keyPrefix, locale, new MessageContext());
+    }
+
+    @Override
+    public Map<String, String> getPluralForms(String keyPrefix, Locale locale, MessageContext context) {
+        Map<String, String> localeMessages = messages.getOrDefault(locale, messages.get(defaultLocale));
+        if (localeMessages == null) {
+            return Collections.emptyMap();
+        }
+        List<String> potentialPrefixes = new ArrayList<>();
+        if (context != null && !context.getContextMap().isEmpty()) {
+            Map.Entry<String, String> entry = context.getContextMap().entrySet().iterator().next();
+            potentialPrefixes.add(keyPrefix + "." + entry.getKey() + "." + entry.getValue());
+        }
+        potentialPrefixes.add(keyPrefix + "._base");
+        potentialPrefixes.add(keyPrefix);
+        for (String prefix : potentialPrefixes) {
+            Map<String, String> forms = getPluralFormsForPrefix(localeMessages, prefix);
+            if (!forms.isEmpty()) {
+                return forms;
             }
-        });
+        }
+        return Collections.emptyMap();
+    }
+
+    private Map<String, String> getPluralFormsForPrefix(Map<String, String> allMessages, String prefix) {
+        Map<String, String> forms = new HashMap<>();
+        String searchPrefix = prefix + ".";
+        for (Map.Entry<String, String> entry : allMessages.entrySet()) {
+            if (entry.getKey().startsWith(searchPrefix)) {
+                String pluralCategory = entry.getKey().substring(searchPrefix.length());
+                if (!pluralCategory.contains(".")) {
+                    forms.put(pluralCategory, entry.getValue());
+                }
+            }
+        }
         return forms;
     }
+
 
     private void loadMessages() {
         for (Locale locale : supportedLocales) {
